initial refactoring changes