@@ -82,7 +82,7 @@ public class ReferralRequestMapper extends AbstractMapper<ReferralRequest> {
                                                 String practiseCode) {
 
         var referralRequest = new ReferralRequest();
-        var id = requestStatement.getId().get(0).getRoot();
+        var id = requestStatement.getId().getFirst().getRoot();
         var identifier = buildIdentifier(id, practiseCode);
         var agent = ParticipantReferenceUtil.getParticipantReference(requestStatement.getParticipant(), ehrComposition);
 
@@ -95,16 +95,16 @@ public class ReferralRequestMapper extends AbstractMapper<ReferralRequest> {
             ehrComposition.getConfidentialityCode()
         );
 
-        referralRequest.setId(id);
-        referralRequest.setMeta(meta);
+        referralRequest.setId(id)
+                       .setMeta(meta);
         referralRequest.getIdentifier().add(identifier);
-        referralRequest.setStatus(ReferralRequestStatus.UNKNOWN);
-        referralRequest.setIntent(ReferralCategory.ORDER);
-        referralRequest.getRequester().setAgent(agent);
-        referralRequest.setAuthoredOnElement(authoredOn);
-        referralRequest.setNote(getNotes(requestStatement));
-        referralRequest.setSubject(new Reference(patient));
-        referralRequest.setPriority(referralPriority);
+        referralRequest.setStatus(ReferralRequestStatus.UNKNOWN)
+                        .setIntent(ReferralCategory.ORDER)
+                        .setAuthoredOnElement(authoredOn)
+                        .setNote(getNotes(requestStatement))
+                        .setSubject(new Reference(patient))
+                        .setPriority(referralPriority)
+                        .getRequester().setAgent(agent);
 
         setReferralRequestContext(referralRequest, ehrComposition, encounters);
         setReferralRequestRecipient(ehrExtract, requestStatement, referralRequest);
@@ -130,7 +130,7 @@ public class ReferralRequestMapper extends AbstractMapper<ReferralRequest> {
     }
 
     private boolean isMatchingAgent(RCMRMT030101UKPart part, String requestAgentRoot) {
-        return part.getAgent().getId().get(0).getRoot().equals(requestAgentRoot)
+        return part.getAgent().getId().getFirst().getRoot().equals(requestAgentRoot)
                && part.getAgent().getAgentPerson() == null;
     }
 
