@@ -51,27 +51,27 @@ public class ObservationCommentMapperTest {
         List<Observation> observations =
             observationCommentMapper.mapResources(ehrExtract, patient, Collections.singletonList(encounter), PRACTISE_CODE);
 
-        var observation = observations.get(0);
+        var observation = observations.getFirst();
 
         assertThat(observation.getId()).isEqualTo(narrativeStatementId);
-        assertThat(observation.getMeta().getProfile().get(0).getValue()).isEqualTo(META_URL);
+        assertThat(observation.getMeta().getProfile().getFirst().getValue()).isEqualTo(META_URL);
         assertThat(observation.getStatus()).isEqualTo(Observation.ObservationStatus.FINAL);
         assertThat(observation.getSubject().getResource()).isEqualTo(patient);
 
         var coding = observation.getCode().getCoding();
-        assertThat(coding.get(0).getCode()).isEqualTo(CODING_CODE);
-        assertThat(coding.get(0).getSystem()).isEqualTo(CODING_SYSTEM);
+        assertThat(coding.getFirst().getCode()).isEqualTo(CODING_CODE);
+        assertThat(coding.getFirst().getSystem()).isEqualTo(CODING_SYSTEM);
 
         assertThat(observation.getEffective().toString()).isEqualTo(
             DateFormatUtil.parseToDateTimeType(narrativeStatement.getAvailabilityTime().getValue()).toString());
 
         assertThat(observation.getIssuedElement().asStringValue()).isEqualTo("2020-10-12T13:33:44.000+00:00");
 
-        var identifier = observation.getIdentifier().get(0);
+        var identifier = observation.getIdentifier().getFirst();
         assertThat(identifier.getValue()).isEqualTo(narrativeStatementId);
         assertThat(identifier.getSystem()).isEqualTo(IDENTIFIER_SYSTEM);
 
-        assertThat(observation.getPerformer().get(0).getReference()).isEqualTo("Practitioner/2D70F602-6BB1-47E0-B2EC-39912A59787D");
+        assertThat(observation.getPerformer().getFirst().getReference()).isEqualTo("Practitioner/2D70F602-6BB1-47E0-B2EC-39912A59787D");
         assertThat(observation.getComment()).isEqualTo("Some example text");
         assertThat(observation.getContext().getResource()).isEqualTo(encounter);
     }
@@ -129,7 +129,7 @@ public class ObservationCommentMapperTest {
         List<Observation> observations =
             observationCommentMapper.mapResources(ehrExtract, patient, Collections.emptyList(), PRACTISE_CODE);
 
-        assertThat(observations.get(0).getIssuedElement().asStringValue()).isNull();
+        assertThat(observations.getFirst().getIssuedElement().asStringValue()).isNull();
     }
 
     @Test
@@ -140,7 +140,7 @@ public class ObservationCommentMapperTest {
             observationCommentMapper.mapResources(ehrExtract, patient, Collections.emptyList(), PRACTISE_CODE);
 
         // Calling `getContext` auto creates a Reference object so asserting the reference is null
-        assertThat(observations.get(0).getContext().getReference()).isNull();
+        assertThat(observations.getFirst().getContext().getReference()).isNull();
     }
 
     @Test
@@ -150,13 +150,13 @@ public class ObservationCommentMapperTest {
         List<Observation> observations =
             observationCommentMapper.mapResources(ehrExtract, patient, Collections.emptyList(), PRACTISE_CODE);
 
-        assertThat(observations.get(0).getComment()).isNull();
+        assertThat(observations.getFirst().getComment()).isNull();
     }
 
     private RCMRMT030101UKNarrativeStatement getNarrativeStatement(RCMRMT030101UKEhrExtract ehrExtract) {
-        return ehrExtract.getComponent().get(0)
-            .getEhrFolder().getComponent().get(0)
-            .getEhrComposition().getComponent().get(0)
+        return ehrExtract.getComponent().getFirst()
+            .getEhrFolder().getComponent().getFirst()
+            .getEhrComposition().getComponent().getFirst()
             .getNarrativeStatement();
     }
 
