@@ -122,7 +122,7 @@ public class ObservationMapperTest {
         when(confidentialityService.createMetaAndAddSecurityIfConfidentialityCodesPresent(
             META_PROFILE,
             ehrComposition.getConfidentialityCode(),
-            observationStatements.get(0).getConfidentialityCode(),
+            observationStatements.getFirst().getConfidentialityCode(),
             compoundStatement.getConfidentialityCode()
         )).thenReturn(META);
 
@@ -136,7 +136,7 @@ public class ObservationMapperTest {
         var observations = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE);
 
         assertThat(observations).hasSize(2);
-        assertMetaSecurityIsPresent(observations.get(0).getMeta());
+        assertMetaSecurityIsPresent(observations.getFirst().getMeta());
         assertMetaSecurityIsPresent(observations.get(1).getMeta());
     }
 
@@ -176,7 +176,7 @@ public class ObservationMapperTest {
             Optional.empty()
         )).thenReturn(META);
 
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertMetaSecurityIsPresent(observation.getMeta());
     }
@@ -194,21 +194,21 @@ public class ObservationMapperTest {
             Optional.empty()
         )).thenReturn(META);
 
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertFixedValues(observation);
         assertThat(observation.getId()).isEqualTo(EXAMPLE_ID);
         assertThat(observation.getEffective()).isInstanceOf(DateTimeType.class);
         assertThat(observation.getEffectiveDateTimeType().getValue()).isEqualTo("2019-07-08T13:35:00+00:00");
         assertThat(observation.getIssuedElement().asStringValue()).isEqualTo(ISSUED_EHR_COMPOSITION_EXAMPLE);
-        assertThat(observation.getPerformer().get(0).getReference()).isEqualTo(PPRF_PARTICIPANT_ID);
+        assertThat(observation.getPerformer().getFirst().getReference()).isEqualTo(PPRF_PARTICIPANT_ID);
         assertThat(observation.getValue()).isInstanceOf(Quantity.class);
         assertQuantity(observation.getValueQuantity(), QUANTITY_VALUE, "kilogram per square meter", "kg/m2");
         assertInterpretation(observation.getInterpretation(), "High", "H", "High");
         assertThat(observation.getComment()).isEqualTo("Subject: Uncle Test text 1");
-        assertThat(observation.getReferenceRange().get(0).getText()).isEqualTo("Age and sex based");
-        assertQuantity(observation.getReferenceRange().get(0).getLow(), REFERENCE_RANGE_LOW_VALUE, "liter", "L");
-        assertQuantity(observation.getReferenceRange().get(0).getHigh(), REFERENCE_RANGE_HIGH_VALUE, "liter", "L");
+        assertThat(observation.getReferenceRange().getFirst().getText()).isEqualTo("Age and sex based");
+        assertQuantity(observation.getReferenceRange().getFirst().getLow(), REFERENCE_RANGE_LOW_VALUE, "liter", "L");
+        assertQuantity(observation.getReferenceRange().getFirst().getHigh(), REFERENCE_RANGE_HIGH_VALUE, "liter", "L");
         assertTrue(observation.hasSubject());
     }
 
@@ -229,7 +229,7 @@ public class ObservationMapperTest {
             Optional.empty()
         )).thenReturn(META);
 
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertFixedValues(observation);
         assertThat(observation.getComment()).isEqualTo(EPISODICITY_WITH_ORIGINAL_TEXT_NOTE_TEXT);
@@ -251,7 +251,7 @@ public class ObservationMapperTest {
             Optional.empty()
         )).thenReturn(META);
 
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertFixedValues(observation);
         assertThat(observation.getComment()).isEqualTo(EPISODICITY_WITH_ORIGINAL_TEXT_NOTE_TEXT_WITH_ORIGINAL_TEXT);
@@ -269,7 +269,7 @@ public class ObservationMapperTest {
             Optional.empty()
         )).thenReturn(META);
 
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertFixedValues(observation);
         assertThat(observation.getComment()).contains(EPISODICITY_WITH_ORIGINAL_TEXT_NOTE_TEXT_WITH_ORIGINAL_TEXT);
@@ -306,12 +306,12 @@ public class ObservationMapperTest {
             Optional.empty()
         )).thenReturn(META);
 
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertFixedValues(observation);
         assertThat(observation.getId()).isEqualTo(EXAMPLE_ID);
         assertThat(observation.getIssuedElement().asStringValue()).isEqualTo(ISSUED_EHR_COMPOSITION_EXAMPLE);
-        assertThat(observation.getPerformer().get(0).getReference()).isEqualTo(PPRF_PARTICIPANT_ID);
+        assertThat(observation.getPerformer().getFirst().getReference()).isEqualTo(PPRF_PARTICIPANT_ID);
         assertNull(observation.getEffective());
         assertNull(observation.getValue());
         assertThat(observation.getInterpretation().getCoding()).isEmpty();
@@ -322,7 +322,7 @@ public class ObservationMapperTest {
     @Test
     public void mapObservationWithValueStringUsingValueTypeST() {
         var ehrExtract = unmarshallEhrExtractElement("value_st_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getValue()).isInstanceOf(StringType.class);
         assertThat(observation.getValueStringType().getValue()).isEqualToIgnoringWhitespace(NEGATIVE_VALUE);
@@ -331,7 +331,7 @@ public class ObservationMapperTest {
     @Test
     public void mapObservationWithValueStringUsingValueTypeCVOriginalText() {
         var ehrExtract = unmarshallEhrExtractElement("value_cv_display_name_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getValue()).isInstanceOf(StringType.class);
         assertThat(observation.getValueStringType().getValue()).isEqualTo(TEST_DISPLAY_VALUE);
@@ -340,7 +340,7 @@ public class ObservationMapperTest {
     @Test
     public void mapObservationWithMultiplePertinentInformation() {
         var ehrExtract = unmarshallEhrExtractElement("multiple_pertinent_information_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getComment()).isEqualTo("Test text 1 Test text 2");
     }
@@ -348,7 +348,7 @@ public class ObservationMapperTest {
     @Test
     public void mapObservationWithCompositionIdMatchingEncounter() {
         var ehrExtract = unmarshallEhrExtractElement("ehr_composition_id_matching_encounter_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertTrue(observation.hasContext());
     }
@@ -357,7 +357,7 @@ public class ObservationMapperTest {
     public void mapObservationWithEffectiveDateTime() {
         var ehrExtract = unmarshallEhrExtractElement(
             "effective_date_time_type_using_effective_time_center.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertTrue(observation.getEffective() instanceof DateTimeType);
         assertThat(observation.getEffectiveDateTimeType().getValueAsString()).isEqualTo("2010-05-21");
@@ -367,7 +367,7 @@ public class ObservationMapperTest {
     public void mapObservationWithEffectivePeriod() {
         var ehrExtract = unmarshallEhrExtractElement(
             "effective_period_start_end_using_effective_time_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertTrue(observation.getEffective() instanceof Period);
         assertThat(observation.getEffectivePeriod().getStartElement().getValueAsString()).isEqualTo("2010-05-21");
@@ -386,7 +386,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_Plus1SequenceComment_Expect_CommentMapped() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_plus1__originalText_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getComment()).isEqualTo(PLUS_ONE_ANNOTATION_TEXT);
     }
@@ -395,7 +395,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_Minus1SequenceComment_Expect_CommentAndOriginalTextMapped() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_minus1_originalText_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         var expectedComment = MINUS_ONE_ANNOTATION_TEXT + StringUtils.SPACE + ORIGINAL_TEXT;
 
@@ -406,7 +406,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_Minus1AndPlus1SequenceComment_Expect_CommentsAndOriginalTextMapped() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_plus1_minus1_originalText_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         var expectedComment = MINUS_ONE_ANNOTATION_TEXT + StringUtils.SPACE + ORIGINAL_TEXT + StringUtils.SPACE + PLUS_ONE_ANNOTATION_TEXT;
 
@@ -417,7 +417,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_ZeroSequenceAndPlus1SequenceComment_Expect_CommentsMapped() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_plus1_zero_originalText_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         var expectedComment = ZERO_ANNOTATION_TEXT + StringUtils.SPACE + PLUS_ONE_ANNOTATION_TEXT;
 
@@ -428,7 +428,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_ZeroSequenceComment_Expect_CommentMapped() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_zero_originalText_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getComment()).isEqualTo(ZERO_ANNOTATION_TEXT);
     }
@@ -437,7 +437,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_Minus1SequenceCommentAndNoOriginalText_Expect_CommentMapped() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_minus1_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getComment()).isEqualTo(MINUS_ONE_ANNOTATION_TEXT);
     }
@@ -446,7 +446,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_AllSequenceCommentsAndOriginalText_Expect_MappedInCorrectOrder() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_all_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         var expectedComment = MINUS_ONE_ANNOTATION_TEXT + StringUtils.SPACE + ORIGINAL_TEXT + StringUtils.SPACE + ZERO_ANNOTATION_TEXT
             + StringUtils.SPACE + PLUS_ONE_ANNOTATION_TEXT;
@@ -458,7 +458,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_WithNullFlavorSequenceComments_Expect_CommentsPostFixed() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_minus1_nullFlavor_originalText.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         var expectedComment = MINUS_ONE_ANNOTATION_TEXT + StringUtils.SPACE + ORIGINAL_TEXT + StringUtils.SPACE
             + NULL_FLAVOR_ANNOTATION_TEXT;
@@ -473,7 +473,7 @@ public class ObservationMapperTest {
         when(codeableConceptMapper.mapToCodeableConcept(any())).thenReturn(codeableConcept);
 
         var ehrExtract = unmarshallEhrExtractElement("full_valid_data_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getCode().getCodingFirstRep())
             .isEqualTo(DegradedCodeableConcepts.DEGRADED_OTHER);
@@ -486,7 +486,7 @@ public class ObservationMapperTest {
         lenient().when(codeableConceptMapper.mapToCodeableConcept(any())).thenReturn(codeableConcept);
 
         var ehrExtract = unmarshallEhrExtractElement("full_valid_data_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getCode().getCodingFirstRep().getDisplay())
             .isEqualTo(CODING_DISPLAY_MOCK);
@@ -495,17 +495,17 @@ public class ObservationMapperTest {
     }
 
     private void assertFixedValues(Observation observation) {
-        assertThat(observation.getMeta().getProfile().get(0).getValue()).isEqualTo(META_PROFILE);
-        assertThat(observation.getIdentifier().get(0).getSystem()).isEqualTo(IDENTIFIER_SYSTEM);
-        assertThat(observation.getIdentifier().get(0).getValue()).isEqualTo(EXAMPLE_ID);
+        assertThat(observation.getMeta().getProfile().getFirst().getValue()).isEqualTo(META_PROFILE);
+        assertThat(observation.getIdentifier().getFirst().getSystem()).isEqualTo(IDENTIFIER_SYSTEM);
+        assertThat(observation.getIdentifier().getFirst().getValue()).isEqualTo(EXAMPLE_ID);
         assertThat(observation.getStatus()).isEqualTo(ObservationStatus.FINAL);
     }
 
     private void assertInterpretation(CodeableConcept interpretation, String text, String code, String display) {
         assertThat(interpretation.getText()).isEqualTo(text);
-        assertThat(interpretation.getCoding().get(0).getCode()).isEqualTo(code);
-        assertThat(interpretation.getCoding().get(0).getDisplay()).isEqualTo(display);
-        assertThat(interpretation.getCoding().get(0).getSystem()).isEqualTo(INTERPRETATION_SYSTEM);
+        assertThat(interpretation.getCoding().getFirst().getCode()).isEqualTo(code);
+        assertThat(interpretation.getCoding().getFirst().getDisplay()).isEqualTo(display);
+        assertThat(interpretation.getCoding().getFirst().getSystem()).isEqualTo(INTERPRETATION_SYSTEM);
     }
 
     private void assertQuantity(Quantity quantity, BigDecimal value, String unit, String code) {
@@ -517,8 +517,8 @@ public class ObservationMapperTest {
     private void assertMetaSecurityIsPresent(final Meta meta) {
         final List<Coding> metaSecurity = meta.getSecurity();
         final int metaSecuritySize = metaSecurity.size();
-        final Coding metaSecurityCoding = metaSecurity.get(0);
-        final UriType metaProfile = meta.getProfile().get(0);
+        final Coding metaSecurityCoding = metaSecurity.getFirst();
+        final UriType metaProfile = meta.getProfile().getFirst();
 
         assertAll(
             () -> assertThat(metaSecuritySize).isEqualTo(1),
@@ -531,24 +531,24 @@ public class ObservationMapperTest {
 
     private RCMRMT030101UKEhrComposition getEhrComposition(RCMRMT030101UKEhrExtract ehrExtract) {
 
-        return ehrExtract.getComponent().get(0)
-            .getEhrFolder().getComponent().get(0)
+        return ehrExtract.getComponent().getFirst()
+            .getEhrFolder().getComponent().getFirst()
             .getEhrComposition();
     }
 
     private RCMRMT030101UKObservationStatement getObservationStatement(RCMRMT030101UKEhrExtract ehrExtract) {
-        return ehrExtract.getComponent().get(0)
-            .getEhrFolder().getComponent().get(0)
-            .getEhrComposition().getComponent().get(0)
+        return ehrExtract.getComponent().getFirst()
+            .getEhrFolder().getComponent().getFirst()
+            .getEhrComposition().getComponent().getFirst()
             .getObservationStatement();
     }
 
     private List<RCMRMT030101UKObservationStatement> getObservationStatementIncludedIntoCompoundStatement(
         RCMRMT030101UKEhrExtract ehrExtract) {
 
-        return ehrExtract.getComponent().get(0)
-            .getEhrFolder().getComponent().get(0)
-            .getEhrComposition().getComponent().get(0).getCompoundStatement().getComponent().stream()
+        return ehrExtract.getComponent().getFirst()
+            .getEhrFolder().getComponent().getFirst()
+            .getEhrComposition().getComponent().getFirst().getCompoundStatement().getComponent().stream()
             .filter(RCMRMT030101UKComponent02::hasObservationStatement)
             .map(RCMRMT030101UKComponent02::getObservationStatement)
             .toList();
